--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -348,9 +348,9 @@ const nationalities = ['Congolese', 'Burundians', 'Rwandans', 'Somalis', 'Ethiop
             Connect with other community members, share experiences, and get support
             through our community forum.
           </p>
-          <a href="/forum" 
+          <a href="https://chat.whatsapp.com/I5MpQ10t7jfIJjBD5eIS5I" 
              class="inline-flex items-center px-8 py-4 bg-white text-primary-600 rounded-xl hover:bg-primary-50 transition-all duration-200 shadow-lg hover:shadow-xl font-semibold group">
-            <span>Visit Community Forum</span>
+            <span>Join Community</span>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2 group-hover:translate-x-1 transition-transform" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
