--- a/src/pages/resources/[...page].astro
+++ b/src/pages/resources/[...page].astro
@@ -90,7 +90,7 @@ const categoryColors = {
           Explore Our Resources
         </span>
         <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">
-          Dzaleka Heritage Resources
+          Dzaleka Online Resources
         </h1>
         <p class="text-lg md:text-xl text-white/90 max-w-2xl mx-auto mb-8">
           Access a curated collection of documents, reports, and media about Dzaleka Refugee Camp
