--- a/src/pages/resources/submit.astro
+++ b/src/pages/resources/submit.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout title="Submit a Resource">
+<Layout title="Submit a Resource | Dzaleka Online Service">
   <main class="container mx-auto px-4 py-8">
     {/* Hero Section */}
     <div class="max-w-2xl mx-auto mb-12">
@@ -25,8 +25,8 @@ import Layout from '../../layouts/Layout.astro';
         <form 
           action="https://formspree.io/f/xqaaajae" 
           method="POST" 
-          class="space-y-6"
-          _next="/resources/submit/thank-you"
+          class="space-y-8"
+          onsubmit="setTimeout(function() { window.location.href = '/resources/submit/thank-you'; }, 1000);"
         >
           {/* Title */}
           <div>
